HOTFIX HandleBars-Helper, dont use ES6 syntax!

--- a/test/testTemplate.hbs
+++ b/test/testTemplate.hbs
@@ -3,7 +3,7 @@
     <div>
         <b>Model-Properties</b><br/>
         Id: {{id}}<br/>
-        Label: {{label}}<br/>
+        Label: {{nl2br label}}<br/>
 
     </div>
 
