fixed bug in Translator getText - ignore illegal replace parameter from hbs template

--- a/test/testTemplate.hbs
+++ b/test/testTemplate.hbs
@@ -4,7 +4,7 @@
         <b>Model-Properties</b><br/>
         Id: {{id}}<br/>
         Label: {{nl2br label}}<br/>
-        {{getText "title.1"}}
+        {{getText "title2" label}}
     </div>
 
 </div>
